force-app/src/objects/c2g__AllocationLog__c.object
<CustomObject>
    <description>A log record for the Allocation Run.</description>
    <fields>
        <fullName>c2g__Allocation__c</fullName>
        <description>The Allocation this log refers to.</description>
        <label>Allocation</label>
        <referenceTo>c2g__Allocation__c</referenceTo>
        <relationshipLabel>Allocation Logs</relationshipLabel>
        <relationshipName>AllocationLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__LogType__c</fullName>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                    <default>true</default>
                    <label>Error</label>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Abort</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__RunDate__c</fullName>
        <label>Run Date</label>
        <type>DateTime</type>
    </fields>
    <label>Allocation Log</label>
    <nameField>
        <displayFormat>A_L-{0}</displayFormat>
        <label>Allocation Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>